# trypema

./: .env.example  .gitignore  AGENTS.md  BENCH.md  CONVENTIONS.md  Cargo.toml  Makefile  README.md  compose.yaml
.github/workflows/: workflow.yml
benches/: common.rs  hybrid_absolute.rs  hybrid_suppressed.rs  local_absolute.rs  local_suppressed.rs  redis_absolute.rs  redis_suppressed.rs  runtime.rs
docker/redis-with-cell/: Dockerfile
docs/: conventions.md  lib.md  redis.md  testing.md
src/: __doctest_helpers.rs  builder.rs  common.rs  error.rs  lib.rs  rate_limiter.rs  runtime.rs
src/hybrid/: absolute_hybrid_commiter.rs  absolute_hybrid_rate_limiter.rs  absolute_hybrid_redis_proxy.rs  common.rs  hybrid_rate_limiter_provider.rs  mod.rs  redis_commiter.rs  suppressed_hybrid_rate_limiter.rs  suppressed_hybrid_redis_proxy.rs
src/hybrid/absolute_hybrid_rate_limiter/: helpers.rs
src/hybrid/suppressed_hybrid_rate_limiter/: helpers.rs
src/local/: absolute_local_rate_limiter.rs  local_rate_limiter_provider.rs  mod.rs  suppressed_local_rate_limiter.rs
src/redis/: absolute_redis_commiter.rs  absolute_redis_proxy.rs  absolute_redis_rate_committer.rs  absolute_redis_rate_limiter.rs  common.rs  mod.rs  redis_rate_limiter_provider.rs  scripts.rs  suppressed_redis_rate_limiter.rs
src/tests/: common.rs  mod.rs  runtime.rs  test_absolute_hybrid_rate_limiter.rs  test_absolute_local_rate_limiter.rs  test_absolute_redis_rate_limiter.rs  test_builder.rs  test_cleanup_loop.rs  test_common_validation.rs  test_redis_state_absolute_hybrid_rate_limiter.rs  test_redis_state_absolute_redis_rate_limiter.rs  test_redis_state_suppressed_hybrid_rate_limiter.rs  test_redis_state_suppressed_redis_rate_limiter.rs  test_suppressed_hybrid_rate_limiter.rs  test_suppressed_local_rate_limiter.rs  test_suppressed_redis_rate_limiter.rs
stress/: Cargo.toml
stress/src/: args.rs  hybrid.rs  local.rs  local_compare.rs  main.rs  redis.rs  redis_compare.rs  runner.rs  runtime.rs
tests/: itest_redis_absolute_rate_limiter.rs
