[package]
name = "trypema"
version = "0.1.0-dev.5"
edition = "2024"
readme = "README.md"
description = "High-performance rate limiting primitives in Rust, designed for concurrency safety, low overhead, and predictable latency."
license = "MIT"
repository = "https://github.com/dev-davexoyinbo/trypema"
categories = ["algorithms", "concurrency", "data-structures"]
keywords = [
  "rate-limiting",
  "rate-limiter",
  "throttling",
  "concurrency",
  "atomic",
]
authors = ["Oyinbo David Bayode <dev.davexoyinbo@gmail.com>"]
documentation = "https://docs.rs/trypema"

[dependencies]
dashmap = "6.1.0"
rand = "0.10.0"
redis = "1.0.3"
tracing = "0.1.44"
