[package]
name = "trypema"
version = "0.1.0-dev.6"
edition = "2024"
readme = "README.md"
description = "High-performance rate limiting primitives in Rust, designed for concurrency safety, low overhead, and predictable latency."
license = "MIT"
repository = "https://github.com/dev-davexoyinbo/trypema"
categories = ["algorithms", "concurrency", "data-structures"]
keywords = [
  "rate-limiting",
  "rate-limiter",
  "throttling",
  "concurrency",
  "atomic",
]
authors = ["Oyinbo David Bayode <dev.davexoyinbo@gmail.com>"]
documentation = "https://docs.rs/trypema"

[package.metadata.docs.rs]
all-features = true

[dependencies]
dashmap = "6.1.0"
rand = "0.10.0"
redis = { version = "1.0.3", optional = true, default-features = false, features = [
  "script",
] }
thiserror = "2.0.18"
tracing = "0.1.44"

[features]
default = ["redis-tokio"]

redis-tokio = [
  "redis",
  "redis/tokio-comp",
  "redis/aio",
  "redis/connection-manager",
]
redis-smol = [
  "redis",
  "redis/smol-comp",
  "redis/aio",
  "redis/connection-manager",
]

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
