[package]
name = "trypema-stress"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
trypema = { path = ".." }
clap = { version = "4.5.60", features = ["derive"] }
hdrhistogram = "7.5.4"

tokio = { version = "1.49.0", optional = true, features = ["rt-multi-thread", "time"] }
redis = { version = "1.0.4", optional = true, default-features = false, features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }

[features]
default = []
redis-tokio = ["dep:tokio", "dep:redis", "trypema/redis-tokio"]
